# flutter_rtsp_player

./: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle
android/src/main/kotlin/com/example/flutter_rtsp_player/: FlutterRtspPlayerPlugin.kt
example/: pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/macos/: Podfile
example/macos/Runner/: DebugProfile.entitlements  Info.plist
example/windows/: CMakeLists.txt  main.cpp
ios/: flutter_rtsp_player.podspec
ios/Classes/: FlutterRtspPlayerPlugin.swift
lib/: flutter_rtsp_player.dart
lib/src/: rtsp_player_controller.dart  rtsp_player_options.dart  rtsp_player_state.dart  rtsp_player_widget.dart
lib/src/ffi/: desktop_vlc_player.dart  libvlc_ffi.dart
linux/: CMakeLists.txt  flutter_rtsp_player_plugin.cc  flutter_rtsp_player_plugin.h
macos/: flutter_rtsp_player.podspec
macos/Classes/: FlutterRtspPlayerPlugin.swift
test/: flutter_rtsp_player_test.dart
windows/: CMakeLists.txt  flutter_rtsp_player_plugin.cpp  flutter_rtsp_player_plugin.h  flutter_rtsp_player_plugin_c_api.cpp  flutter_rtsp_player_plugin_c_api.h
